[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muqlora"
version = "0.1.0"
description = "LoRA adapter for MuQ"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Zhongqi Luo" },
]
dependencies = [
    "muq",
    "torch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/lzqlzzq/MuQ-LoRA"
Repository = "https://github.com/lzqlzzq/MuQ-LoRA"

[tool.setuptools.packages.find]
include = ["muqlora*"]
